istio/virtualservice.yaml
apiVersion: networking.istio/v1alpha3
kind: VirtualService
metadata:
  name: vs-flask-v3
spec:
  hosts:
  - "k8s.cluster.my.com"
  gateways:
  - gateway-flask-v3
  http:
  - match:
    - uri:
      prefix: /

      route:
      - destination:
          host: svc-flask-v3
          port: 5000
